tests/baselines/reference/accessorsOverrideProperty2.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/accessorsOverrideProperty2.ts(6,7): error TS2611: Class 'Base' defines instance member property 'x', but extended class 'Derived' defines it as instance member accessor.


==== tests/cases/conformance/classes/propertyMemberDeclarations/accessorsOverrideProperty2.ts (1 errors) ====
    class Base {
      x = 1;
    }
    
    class Derived extends Base {
      get x() { return 2; } // should be an error
          ~
!!! error TS2611: Class 'Base' defines instance member property 'x', but extended class 'Derived' defines it as instance member accessor.
      set x(value) { console.log(`x was set to ${value}`); }
    }
    
    const obj = new Derived(); // nothing printed
    console.log(obj.x); // 1
    